--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,10 +16,11 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Asteroides"
         android:id="@+id/textView"
-        android:textColor="#ffffffff"
+        android:textColor="#000000"
         android:layout_weight="0.08"
         android:layout_gravity="center_horizontal"
-        android:textSize="28dp" />
+        android:textSize="28dp"
+        android:autoText="false" />
 
     <Button
         android:layout_width="wrap_content"
